--- a/src/client/components/ImageContainer/style.less
+++ b/src/client/components/ImageContainer/style.less
@@ -7,6 +7,7 @@
     position: relative;
     text-align: center;
     .main-image {
+      min-width: @imageWidth;
       width: @imageWidth;
     }
 
