Added magnifying detection for area selected and esc for drawing

--- a/src/client/components/ImageContainer/MainCanvas/RectInfoTip/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/RectInfoTip/style.less
@@ -8,11 +8,15 @@
     cursor: pointer;
   }
 
-  .label-form {
+  input {
     color: black;
     height: 20px;
-    width: 100px;
   }
+
+  .label-form {
+    width: 80px;
+  }
+
   .label-value {
     cursor: pointer;
 
