--- a/src/client/components/ImageContainer/MainCanvas/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/style.less
@@ -1,3 +1,12 @@
+.main-canvas {
+  position: absolute;
+  cursor: crosshair;
+}
+
+.magn-region {
+  border: 1px solid @border-color;
+}
+
 .rect-pt {
   position: absolute;
   display: inline-block;
