--- a/src/client/components/ImageContainer/style.less
+++ b/src/client/components/ImageContainer/style.less
@@ -2,19 +2,15 @@
 
 .image-container-wrap {
   text-align: center;
-  margin-top: 100px;
+  position: relative;
   .image-wrap {
+    margin-top: 100px;
     position: relative;
     text-align: center;
     .main-image {
+      max-width: 800px;
       min-width: @imageWidth;
-      width: @imageWidth;
-    }
-
-    .main-canvas {
-      position: absolute;
-      width: @imageWidth;
-      cursor: crosshair;
     }
   }
+
 }
