Feature - able to delete drawn squares

--- a/src/client/components/ImageContainer/MainCanvas/RectInfoTip/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/RectInfoTip/style.less
@@ -19,7 +19,12 @@
 
   .label-value {
     cursor: pointer;
+  }
 
+  .label-delete {
+    margin-top: 5px;
+    color: red;
+    cursor: pointer;
   }
 
   .close-tip{
