--- a/src/client/components/ImageContainer/MainCanvas/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/style.less
@@ -4,7 +4,7 @@
 }
 
 .magn-region {
-  border: 1px solid @border-color;
+  .grey-border();
 }
 
 .undo-tool-wrap {
@@ -14,9 +14,9 @@
 
 .undo-tool {
   &:hover {
-    background-color: #1890ff;
-    color: white;
+    .hover-effect();  
   }
+  .grey-border();
   border: 1px solid @border-color;
   width: 100px;
   cursor: pointer;
@@ -28,6 +28,7 @@
   pointer-events: none;
   color: white;
   background-color: #6c757d;
+  .grey-border();  
 }
 
 .rect-pt {
