--- a/src/client/less/_mixin.less
+++ b/src/client/less/_mixin.less
@@ -57,3 +57,12 @@
     display: flex;
     align-items: center;
 }
+
+.grey-border() {
+  border: 1px solid @border-color;
+}
+
+.hover-effect() {
+    background-color: #1890ff;
+    color: white;
+}
