Added dataset id selector

--- a/src/client/components/ImageContainer/MainCanvas/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/style.less
@@ -25,10 +25,7 @@
 }
 
 .tool-disabled {
-  pointer-events: none;
-  color: white;
-  background-color: #6c757d;
-  .grey-border();  
+  .disabled-button();
 }
 
 .rect-pt {
