--- a/src/client/container/HomePage/style.less
+++ b/src/client/container/HomePage/style.less
@@ -1,9 +1,8 @@
 .homePage {
     line-height: 2em;
 
-    ._link {
-        color: blue;
-        text-decoration: underline;
-        cursor: pointer;
+    .select-a-set {
+        text-align: center;
+        margin-top: 100px;
     }
 }
