--- a/src/client/less/_mixin.less
+++ b/src/client/less/_mixin.less
@@ -66,3 +66,10 @@
     background-color: #1890ff;
     color: white;
 }
+
+.disabled-button() {
+    pointer-events: none;
+    color: white;
+    background-color: #6c757d;
+    .grey-border();  
+}
