fixing height bug

--- a/src/client/components/Header/UploadImagesButton/UploadImagesModalContainer/TagImages/style.less
+++ b/src/client/components/Header/UploadImagesButton/UploadImagesModalContainer/TagImages/style.less
@@ -1,23 +1,34 @@
 .tag-images-wrap {
-  .file-tag-wrap {
+
+  .tag-images-div {
     .flex-align();
     justify-content: space-between;
-
-    .image-id-name {
-      max-width: 300px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
 
     .image-id-input {
       width: 50px;
       text-align: right;
     }
   }
+  
+  
+  .tag-images-list {
+    .file-tag-wrap {
+      .flex-align();
+      justify-content: space-between;
 
-  .err-label-img-id {
-    margin-top: 10px;
-    color: red;
-    border: 1px solid red;
+      .image-id-name {
+        max-width: 300px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      
+    }
+
+    .err-label-img-id {
+      margin-top: 10px;
+      color: red;
+      border: 1px solid red;
+    }
   }
 }
