changed dropdown to input and dropdown

--- a/src/client/components/ImageContainer/MainCanvas/RectInfoTip/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/RectInfoTip/style.less
@@ -17,6 +17,12 @@
     width: 80px;
   }
 
+  .react-dropdown-select-item {
+    color: black;
+    // width: 80px;
+    text-align: center;
+  }
+
   .label-value {
     cursor: pointer;
   }
