upload image pipeline

--- a/src/client/components/Header/UploadImagesButton/UploadImagesModalContainer/TagImages/style.less
+++ b/src/client/components/Header/UploadImagesButton/UploadImagesModalContainer/TagImages/style.less
@@ -12,6 +12,10 @@
   
   
   .tag-images-list {
+    max-height: 250px;
+    overflow-y: auto;
+    overflow-x: hidden;
+
     .file-tag-wrap {
       .flex-align();
       justify-content: space-between;
