fixed overflow for upload files

--- a/src/client/components/Header/UploadImagesButton/UploadImagesModalContainer/UploadImages/style.less
+++ b/src/client/components/Header/UploadImagesButton/UploadImagesModalContainer/UploadImages/style.less
@@ -33,7 +33,9 @@
   .file-list {
     margin-top: 20px;
     text-align: left;
-    
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
     .file-list-header {
       .flex-align();
       justify-content: space-between;
