update tip to custom component

--- a/src/client/components/ImageContainer/MainCanvas/style.less
+++ b/src/client/components/ImageContainer/MainCanvas/style.less
@@ -34,3 +34,14 @@
   cursor: pointer;
   color: red;
 }
+
+.react-tip {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.83);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.hidden-tip {
+  display: none;
+}
